--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: files_cache
 description: Package desenvolvida para salvar arquivos temporários na memória de dispositivos em aplicações dart e flutter
-version: 1.0.0
-homepage: https://github.com/Suebersson/files_cache
-repository: https://github.com/Suebersson/files_cache.git
+version: 1.0.2
+homepage: https://github.com/Suebersson/files_cache.git
+repository: https://github.com/Suebersson/files_cache
 
 # Comandos para atulizar o repositório no github
 # git init
@@ -16,7 +16,7 @@ environment:
   sdk: '>=2.16.1 <3.0.0'
 
 dependencies:
-  dart_dev_utils: ^1.0.6
+  dart_dev_utils: ^1.0.9
 #   path: ^1.8.0
 
 dev_dependencies:
