--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -15,9 +15,11 @@ include: package:lints/recommended.yaml
 
 # Uncomment the following section to specify additional rules.
 
-# linter:
-#   rules:
-#     - camel_case_types
+linter:
+  rules:
+    prefer_relative_imports: true # preferência para importação de arquivos(.dart) do projeto será relativa 
+    # always_use_package_imports: true # importar pela raíz da package do projeto
+    # camel_case_types: true
 
 # analyzer:
 #   exclude:
